// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`momentum detection recognizes double swipe right 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          -782,
          8,
        ],
        "axisVelocity": Array [
          -0.8457600709703869,
          0,
        ],
        "debugData": null,
        "deltaTotal": -782,
        "deltaVelocity": 0,
        "isMomentum": false,
        "type": "WHEEL_END",
        "willEndSoon": false,
      },
      "range": Array [
        0,
        21,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "canceled": true,
      "lastData": Object {
        "axisDeltas": Array [
          -952,
          8,
        ],
        "axisVelocity": Array [
          -0.3411703626905235,
          0,
        ],
        "debugData": null,
        "deltaTotal": -952,
        "deltaVelocity": 0,
        "isMomentum": true,
        "type": "MOMENTUM_WHEEL_CANCEL",
        "willEndSoon": false,
      },
      "range": Array [
        21,
        33,
      ],
      "wheelType": "MOMENTUM_WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          -952,
          8,
        ],
        "axisVelocity": Array [
          -0.3411703626905235,
          0,
        ],
        "debugData": null,
        "deltaTotal": -952,
        "deltaVelocity": 0,
        "isMomentum": true,
        "type": "ANY_WHEEL_END",
        "willEndSoon": false,
      },
      "range": Array [
        0,
        33,
      ],
      "wheelType": "ANY_WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          -1281,
          -2,
        ],
        "axisVelocity": Array [
          -1.3290999043459837,
          0,
        ],
        "debugData": null,
        "deltaTotal": -1281,
        "deltaVelocity": 0,
        "isMomentum": false,
        "type": "WHEEL_END",
        "willEndSoon": false,
      },
      "range": Array [
        33,
        56,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          -1755,
          -2,
        ],
        "axisVelocity": Array [
          -0.019964064681865807,
          0,
        ],
        "debugData": null,
        "deltaTotal": -1755,
        "deltaVelocity": 0,
        "isMomentum": true,
        "type": "MOMENTUM_WHEEL_END",
        "willEndSoon": true,
      },
      "range": Array [
        56,
        102,
      ],
      "wheelType": "MOMENTUM_WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          -1755,
          -2,
        ],
        "axisVelocity": Array [
          -0.019964064681865807,
          0,
        ],
        "debugData": null,
        "deltaTotal": -1755,
        "deltaVelocity": 0,
        "isMomentum": true,
        "type": "ANY_WHEEL_END",
        "willEndSoon": true,
      },
      "range": Array [
        33,
        102,
      ],
      "wheelType": "ANY_WHEEL",
    },
  ],
}
`;

exports[`momentum detection recognizes swipe down - fast 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          -23,
          -2342,
        ],
        "axisVelocity": Array [
          0,
          -5.617647058823529,
        ],
        "debugData": null,
        "deltaTotal": -2342,
        "deltaVelocity": 0,
        "isMomentum": false,
        "type": "WHEEL_END",
        "willEndSoon": false,
      },
      "range": Array [
        0,
        19,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          -23,
          -5953,
        ],
        "axisVelocity": Array [
          0,
          -0.02040816326530612,
        ],
        "debugData": null,
        "deltaTotal": -5953,
        "deltaVelocity": 0,
        "isMomentum": true,
        "type": "MOMENTUM_WHEEL_END",
        "willEndSoon": true,
      },
      "range": Array [
        19,
        95,
      ],
      "wheelType": "MOMENTUM_WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          -23,
          -5953,
        ],
        "axisVelocity": Array [
          0,
          -0.02040816326530612,
        ],
        "debugData": null,
        "deltaTotal": -5953,
        "deltaVelocity": 0,
        "isMomentum": true,
        "type": "ANY_WHEEL_END",
        "willEndSoon": true,
      },
      "range": Array [
        0,
        95,
      ],
      "wheelType": "ANY_WHEEL",
    },
  ],
}
`;

exports[`momentum detection recognizes swipe down 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          7,
          -1643,
        ],
        "axisVelocity": Array [
          0,
          -1.4242424242424243,
        ],
        "debugData": null,
        "deltaTotal": -1643,
        "deltaVelocity": 0,
        "isMomentum": false,
        "type": "WHEEL_END",
        "willEndSoon": false,
      },
      "range": Array [
        0,
        41,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          7,
          -2134,
        ],
        "axisVelocity": Array [
          0,
          -0.024390243902439025,
        ],
        "debugData": null,
        "deltaTotal": -2134,
        "deltaVelocity": 0,
        "isMomentum": true,
        "type": "MOMENTUM_WHEEL_END",
        "willEndSoon": true,
      },
      "range": Array [
        41,
        87,
      ],
      "wheelType": "MOMENTUM_WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          7,
          -2134,
        ],
        "axisVelocity": Array [
          0,
          -0.024390243902439025,
        ],
        "debugData": null,
        "deltaTotal": -2134,
        "deltaVelocity": 0,
        "isMomentum": true,
        "type": "ANY_WHEEL_END",
        "willEndSoon": true,
      },
      "range": Array [
        0,
        87,
      ],
      "wheelType": "ANY_WHEEL",
    },
  ],
}
`;

exports[`momentum detection recognizes swipe left - fast 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          2524,
          -8,
        ],
        "axisVelocity": Array [
          7.029411764705882,
          0,
        ],
        "debugData": null,
        "deltaTotal": 2524,
        "deltaVelocity": 0,
        "isMomentum": false,
        "type": "WHEEL_END",
        "willEndSoon": false,
      },
      "range": Array [
        0,
        17,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          7237,
          -8,
        ],
        "axisVelocity": Array [
          0.019801980198019802,
          0,
        ],
        "debugData": null,
        "deltaTotal": 7237,
        "deltaVelocity": 0,
        "isMomentum": true,
        "type": "MOMENTUM_WHEEL_END",
        "willEndSoon": true,
      },
      "range": Array [
        17,
        100,
      ],
      "wheelType": "MOMENTUM_WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          7237,
          -8,
        ],
        "axisVelocity": Array [
          0.019801980198019802,
          0,
        ],
        "debugData": null,
        "deltaTotal": 7237,
        "deltaVelocity": 0,
        "isMomentum": true,
        "type": "ANY_WHEEL_END",
        "willEndSoon": true,
      },
      "range": Array [
        0,
        100,
      ],
      "wheelType": "ANY_WHEEL",
    },
  ],
}
`;

exports[`momentum detection recognizes swipe left 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          2138,
          -15,
        ],
        "axisVelocity": Array [
          2.1911764705882355,
          0,
        ],
        "debugData": null,
        "deltaTotal": 2138,
        "deltaVelocity": 0,
        "isMomentum": false,
        "type": "WHEEL_END",
        "willEndSoon": false,
      },
      "range": Array [
        0,
        29,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          3001,
          -15,
        ],
        "axisVelocity": Array [
          0.02,
          0,
        ],
        "debugData": null,
        "deltaTotal": 3001,
        "deltaVelocity": 0,
        "isMomentum": true,
        "type": "MOMENTUM_WHEEL_END",
        "willEndSoon": true,
      },
      "range": Array [
        29,
        82,
      ],
      "wheelType": "MOMENTUM_WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          3001,
          -15,
        ],
        "axisVelocity": Array [
          0.02,
          0,
        ],
        "debugData": null,
        "deltaTotal": 3001,
        "deltaVelocity": 0,
        "isMomentum": true,
        "type": "ANY_WHEEL_END",
        "willEndSoon": true,
      },
      "range": Array [
        0,
        82,
      ],
      "wheelType": "ANY_WHEEL",
    },
  ],
}
`;

exports[`momentum detection recognizes swipe right - fast 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          -3206,
          0,
        ],
        "axisVelocity": Array [
          -10.411881793655818,
          0,
        ],
        "debugData": null,
        "deltaTotal": -3206,
        "deltaVelocity": 0,
        "isMomentum": false,
        "type": "WHEEL_END",
        "willEndSoon": false,
      },
      "range": Array [
        0,
        33,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          -6351,
          0,
        ],
        "axisVelocity": Array [
          -0.02000300045137455,
          0,
        ],
        "debugData": null,
        "deltaTotal": -6351,
        "deltaVelocity": 0,
        "isMomentum": true,
        "type": "MOMENTUM_WHEEL_END",
        "willEndSoon": true,
      },
      "range": Array [
        33,
        96,
      ],
      "wheelType": "MOMENTUM_WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          -6351,
          0,
        ],
        "axisVelocity": Array [
          -0.02000300045137455,
          0,
        ],
        "debugData": null,
        "deltaTotal": -6351,
        "deltaVelocity": 0,
        "isMomentum": true,
        "type": "ANY_WHEEL_END",
        "willEndSoon": true,
      },
      "range": Array [
        0,
        96,
      ],
      "wheelType": "ANY_WHEEL",
    },
  ],
}
`;

exports[`momentum detection recognizes swipe right 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          -1247,
          0,
        ],
        "axisVelocity": Array [
          -1.1851401654532354,
          0,
        ],
        "debugData": null,
        "deltaTotal": -1247,
        "deltaVelocity": 0,
        "isMomentum": false,
        "type": "WHEEL_END",
        "willEndSoon": false,
      },
      "range": Array [
        0,
        25,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          -1634,
          0,
        ],
        "axisVelocity": Array [
          -0.01992925115792905,
          0,
        ],
        "debugData": null,
        "deltaTotal": -1634,
        "deltaVelocity": 0,
        "isMomentum": true,
        "type": "MOMENTUM_WHEEL_END",
        "willEndSoon": true,
      },
      "range": Array [
        25,
        63,
      ],
      "wheelType": "MOMENTUM_WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          -1634,
          0,
        ],
        "axisVelocity": Array [
          -0.01992925115792905,
          0,
        ],
        "debugData": null,
        "deltaTotal": -1634,
        "deltaVelocity": 0,
        "isMomentum": true,
        "type": "ANY_WHEEL_END",
        "willEndSoon": true,
      },
      "range": Array [
        0,
        63,
      ],
      "wheelType": "ANY_WHEEL",
    },
  ],
}
`;

exports[`momentum detection recognizes swipe up - fast 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          -38,
          2735,
        ],
        "axisVelocity": Array [
          0,
          5.838235294117647,
        ],
        "debugData": null,
        "deltaTotal": 2735,
        "deltaVelocity": 0,
        "isMomentum": false,
        "type": "WHEEL_END",
        "willEndSoon": false,
      },
      "range": Array [
        0,
        21,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          -38,
          6526,
        ],
        "axisVelocity": Array [
          0,
          0.0196078431372549,
        ],
        "debugData": null,
        "deltaTotal": 6526,
        "deltaVelocity": 0,
        "isMomentum": true,
        "type": "MOMENTUM_WHEEL_END",
        "willEndSoon": true,
      },
      "range": Array [
        21,
        98,
      ],
      "wheelType": "MOMENTUM_WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          -38,
          6526,
        ],
        "axisVelocity": Array [
          0,
          0.0196078431372549,
        ],
        "debugData": null,
        "deltaTotal": 6526,
        "deltaVelocity": 0,
        "isMomentum": true,
        "type": "ANY_WHEEL_END",
        "willEndSoon": true,
      },
      "range": Array [
        0,
        98,
      ],
      "wheelType": "ANY_WHEEL",
    },
  ],
}
`;

exports[`momentum detection recognizes swipe up 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          -70,
          2197,
        ],
        "axisVelocity": Array [
          0,
          3.3582089552238807,
        ],
        "debugData": null,
        "deltaTotal": 2197,
        "deltaVelocity": 0,
        "isMomentum": false,
        "type": "WHEEL_END",
        "willEndSoon": false,
      },
      "range": Array [
        0,
        23,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          -70,
          3774,
        ],
        "axisVelocity": Array [
          0,
          0.02,
        ],
        "debugData": null,
        "deltaTotal": 3774,
        "deltaVelocity": 0,
        "isMomentum": true,
        "type": "MOMENTUM_WHEEL_END",
        "willEndSoon": true,
      },
      "range": Array [
        23,
        84,
      ],
      "wheelType": "MOMENTUM_WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          -70,
          3774,
        ],
        "axisVelocity": Array [
          0,
          0.02,
        ],
        "debugData": null,
        "deltaTotal": 3774,
        "deltaVelocity": 0,
        "isMomentum": true,
        "type": "ANY_WHEEL_END",
        "willEndSoon": true,
      },
      "range": Array [
        0,
        84,
      ],
      "wheelType": "ANY_WHEEL",
    },
  ],
}
`;
